# grimoirelab-sortinghat

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NEWS  README.md  pyproject.toml  requirements.txt  requirements_setup.txt  requirements_tests.txt  setup.cfg  setup.py
.github/workflows/: changelog.yml  ci.yml  docker-image.yml  release.yml  tests.yml
config/: schema.py  urls.py  wsgi.py
config/settings/: config_testing.py  config_testing_tenant.py  devel.py  testing.py  testing_tenant.py
docker/: Dockerfile  README.md  docker-compose.yml  server-entrypoint.sh  server.dockerfile  worker-entrypoint.sh  worker.dockerfile
docker/nginx/: nginx.conf
docs/: README.md  conf.py  database.md  index.rst
docs/sortinghat/: api-reference.rst  database.md  index.md  profile.md
misc/: eclipse2sh  gitdm2sh  grimoirelab2sh  mailmap2sh  mozilla2sh  mozilla2sh.py  stackalytics2sh
releases/: 0.10.0-rc.1.md  0.10.0-rc.2.md  0.10.0.md  0.11.0-rc.1.md  0.11.0.md  0.11.1-rc.1.md  0.11.1.md  0.12.0-rc.1.md  0.12.0.md  0.13.0-rc.1.md  0.13.0.md  0.13.1-rc.1.md  0.14.0-rc.1.md  0.14.0.md  0.15.0-rc.1.md  0.15.0.md  0.15.1-rc.1.md  0.16.0.md  0.17.0-rc.1.md  0.17.0.md  0.18.0-rc.1.md  0.18.0.md  0.19.0-rc.1.md  0.19.0-rc.2.md  0.19.0.md  0.19.1-rc.1.md  0.19.1.md  0.19.2-rc.1.md  0.19.2.md  0.20.0-rc.1.md  0.20.0.md  0.21.0-rc.1.md  0.21.0.md  0.21.1-rc.1.md  0.21.1.md  0.21.2-rc.1.md  0.21.2.md  0.7.20.md  0.7.21-rc.1.md  0.7.21-rc.2.md  (+93 more)
releases/unreleased/: [gitdm]-skip-invalid-format-lines.yml  [gitdm]-the-#-character-in-the-middle-is-a-valid-line.yml  add-missing-loading-and-error-indicators.yml  add-org-to-individual.yml  add-profile-to-workspace.yml  allow-pasting-linkedin-url.yml  api-method-to-create-task.yml  authentication-required-fixed.yml  automatic-affiliation-fixed-and-reduced-results.yml  bug-fix-in-job-retrieval-method.yml  case-insensitive-matching-for-criteria.yml  connection-closed-when-job-is-executed.yml  consistent-date-format.yml  create-django_sessions-table.yml  csrf-token-only-required-from-ui.yml  customizable-trusted-sources-for-username-matching.yml  dedicated-queues-in-multi-tenancy.yml  default-s3-location-for-static-files.yml  delete-task-on-error.yml  display-individuals-most-recent-organization.yml  django-version-updated.yml  drag-and-drop-to-enroll-in-teams.yml  drop-python-37.yml  email-affiliation-error.yml  faster-loading-times-for-the-list-of-individuals.yml  filter-by-org-full-name.yml  fix-api-url-to-change-password.yml  fix-enroll-in-profile.yml  fix-individual-page-not-loadingd.yml  fix-search-syntax-link.yml  import-identities-automatically.yml  importer-job-rescheduled-fixed.yml  importing-identities-with-oversized-fields-failed.yml  improved-session-cookies-security.yml  improved-ui-for-merge-recommendations.yml  increased-minimum-version-for-nodejs-to-22.yml  job-results-in-sortinghat.yml  job-timeout-updated.yml  last-run-of-scheduled-tasks.yml  loading-tables.yml  (+44 more)
sortinghat/: __init__.py  _version.py  api.py  command.py  exceptions.py  matcher.py  parser.py  register.py  utils.py
sortinghat/app/: schema.py  urls.py  wsgi.py
sortinghat/cli/: sortinghat.py  utils.py
sortinghat/cmd/: __init__.py  add.py  affiliate.py  autogender.py  autoprofile.py  blacklist.py  config.py  countries.py  enroll.py  export.py  init.py  load.py  log.py  merge.py  move.py  organizations.py  profile.py  remove.py  show.py  unify.py  withdraw.py
sortinghat/config/: permission_groups.json  settings.py  tenants.json
sortinghat/core/: admin.py  api.py  apps.py  aux.py  context.py  db.py  decorators.py  errors.py  jobs.py  log.py  middleware.py  models.py  schema.py  tenant.py  utils.py  views.py
sortinghat/data/: countries.csv
sortinghat/db/: api.py  database.py  model.py
sortinghat/matching/: __init__.py  email.py  email_name.py  github.py  simple.py  username.py
sortinghat/misc/: eclipse2sh.py  gitdm2sh.py  grimoirelab2sh.py  mailmap2sh.py  mozilla2sh.py  stackalytics2sh.py
sortinghat/parsing/: __init__.py  eclipse.py  gitdm.py  grimoirelab.py  mailmap.py  mozilla.py  sh.py  stackalytics.py
sortinghat/server/: sortinghat_admin.py  sortinghatd.py  sortinghatw.py
sortinghat/templates/: add.tmpl  affiliate.tmpl  autogender.tmpl  autoprofile.tmpl  blacklist.tmpl  config.tmpl  countries.tmpl  load_blacklist.tmpl  load_domains.tmpl  log.tmpl  match.tmpl  merge.tmpl  move.tmpl  organizations.tmpl  profile.tmpl  remove.tmpl  show.tmpl  unify.tmpl
sortinghat/utils/: __init__.py
tests/: __init__.py  base.py  config.py  run_tests.py  runners.py  test_api.py  test_aux.py  test_client.py  test_cmd_add.py  test_cmd_affiliate.py  test_cmd_autogender.py  test_cmd_autoprofile.py  test_cmd_blacklist.py  test_cmd_config.py  test_cmd_countries.py  test_cmd_enroll.py  test_cmd_export.py  test_cmd_init.py  test_cmd_load.py  test_cmd_log.py  test_cmd_merge.py  test_cmd_move.py  test_cmd_organizations.py  test_cmd_profile.py  test_cmd_remove.py  test_cmd_show.py  test_cmd_unify.py  test_cmd_withdraw.py  test_db.py  test_db_api.py  test_errors.py  test_exceptions.py  test_jobs.py  test_log.py  test_matcher.py  test_matcher_email.py  test_matcher_email_name.py  test_matcher_github.py  test_matcher_simple.py  test_matcher_username.py  (+12 more)
tests/cli/: config_file.cfg  test_cmd_add.py  test_cmd_config.py  test_cmd_countries.py  test_cmd_enroll.py  test_cmd_lock.py  test_cmd_merge.py  test_cmd_mv.py  test_cmd_orgs.py  test_cmd_profile.py  test_cmd_rm.py  test_cmd_show.py  test_cmd_split.py  test_cmd_withdraw.py
tests/data/: domains_orgs_invalid_comments.txt  domains_orgs_valid.txt  domains_orgs_valid_alt.txt  eclipse_identities_missing_keys.json  eclipse_identities_valid.json  eclipse_ids_missing_keys.json  eclipse_invalid.json  eclipse_invalid_datetime.json  eclipse_orgs_missing_keys.json  eclipse_valid.json  gitdm_email_aliases_valid.txt  (+62 more)
ui/: .eslintrc.js  README.md  cypress.config.js  jest-puppeteer.config.js  jest.config.js  package.json  vue.config.js
utils/: create_sh_0_7_fixture.py
(+289 files in other folders)
