[tool.poetry]
name = "sortinghat"
version = "0.7.20"
description = "A tool to manage identities."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-sortinghat"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "sortinghat" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-sortinghat/issues"

[tool.poetry.scripts]
sortinghat = 'sortinghat.bin.sortinghat:main'
mg2sh = 'sortinghat.bin.mg2sh:main'
sh2mg = 'sortinghat.bin.sh2mg:main'
eclipse2sh = 'sortinghat.misc.eclipse2sh:main'
gitdm2sh = 'sortinghat.misc.gitdm2sh:main'
grimoirelab2sh = 'sortinghat.misc.grimoirelab2sh:main'
mailmap2sh = 'sortinghat.misc.mailmap2sh:main'
mozilla2sh = 'sortinghat.misc.mozilla2sh:main'
stackalytics2sh = 'sortinghat.misc.stackalytics2sh:main'

[tool.poetry.dependencies]
python = "^3.7"

PyMySQL = ">=0.7.0"
sqlalchemy = "~1.3.0"
jinja2 = "~3.0.1"
python-dateutil = "^2.6.0"
pandas = ">=0.22, <=0.25.3"
numpy = "<1.21.1"
pyyaml = ">=3.12"
requests = "^2.9"
urllib3 = "^1.22"

[tool.poetry.dev-dependencies]
httpretty = "0.9.7"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
