[tool.poetry]
name = "sortinghat"
version = "0.8.0-dev"
description = "A tool to manage identities."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-sortinghat"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "sortinghat" },
    { include = "tests", format = "sdist" },
]
exclude = [
    "sortinghat/static"
]
include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-sortinghat/issues"

[tool.poetry.scripts]
sortinghat = "sortinghat.cli.sortinghat:sortinghat"
sortinghatd = "sortinghat.server.sortinghatd:sortinghatd"
sortinghatw = "sortinghat.server.sortinghatw:sortinghatw"
sortinghat-admin = "sortinghat.server.sortinghat_admin:sortinghat_admin"

[tool.poetry.dependencies]
python = "^3.7.1"

click = "7.1.1"
Django = "3.1"
django-graphql-jwt = "^0.3.0"
graphene-django = "^2.0"
sgqlc = "^10.1"
mysqlclient = "2.0.3"
python-dateutil = "^2.8.0"
requests = "^2.7.0"
uri = "^2.0.1"
Jinja2 = "^3.1.1"
rq = "^1.4.0"
django-rq = "^2.3.2"
pandas = "^1.0.5"
django-cors-headers = "^3.7.0"
PyJWT = "1.7.1"
uWSGI = "^2.0"
django-treebeard = "^4.5.1"
importlib-resources = "^5.2.0"
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true}

# Documentation
myst-parser = { version = "^0.15.1", optional = true}
furo = { version = "2021.7.28b40", optional = true}

[tool.poetry.dev-dependencies]
fakeredis = "^1.4.1"
httpretty = "0.9.7"
flake8 = "^3.9.0"

[tool.poetry.extras]
docs = [
    "furo",
    "myst-parser",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
