[tool.poetry]
name = "sortinghat"
version = "0.21.1"
description = "A tool to manage identities."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-sortinghat"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "sortinghat" },
    { include = "tests", format = "sdist" },
]
exclude = [
    "sortinghat/static"
]
include = [
    { path = "sortinghat/core/static" },
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-sortinghat/issues"

[tool.poetry.scripts]
sortinghat = "sortinghat.cli.sortinghat:sortinghat"
sortinghatd = "sortinghat.server.sortinghatd:sortinghatd"
sortinghatw = "sortinghat.server.sortinghatw:sortinghatw"
sortinghat-admin = "sortinghat.server.sortinghat_admin:sortinghat_admin"

[tool.poetry.dependencies]
python = "^3.8"

click = "7.1.1"
Django = "^3.2"
django-graphql-jwt = "^0.3.0"
graphene-django = "^2.15"
sgqlc = "^16.1"
mysqlclient = "2.0.3"
python-dateutil = "^2.8.2"
requests = "^2.7.0"
Jinja2 = "^3.1.1"
rq = "<1.12.0"
django-rq = "^2.3.2"
pandas = "^1.3.5"
django-cors-headers = "^3.7.0"
PyJWT = "^2.4.0"
uWSGI = "^2.0"
django-treebeard = "^4.5.1"
importlib-resources = "^5.2.0"
setuptools = ">65.5.0"
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true}
django-storages = {extras = ["google"], version = "^1.13.2"}
numpy = "==1.22.0"
google-auth = "^2.18.0"

urllib3 = "^1.26"  # Pinend to be compatible with Perceval

[tool.poetry.dev-dependencies]
fakeredis = "^2.0.0"
httpretty = "^1.1.4"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
